--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-NEXT_PUBLIC_API_BASE_URL=https://pruebatecnicaoctubre-production.up.railway.app/api
+NEXT_PUBLIC_API_BASE_URL=http://localhost:4001/api
